got more wiring done of firestore

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
   <h1>
     {{ title }}!
   </h1>
-  Stuff here
+  <!-- <div *ngFor="let park of parks">
+    {{parkName}}
+  </div> -->
 </div>
 
 <router-outlet></router-outlet>
