--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,8 +13,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://www.google.com/design/spec/style/color.html
-$candy-app-primary: mat-palette($mat-light-green, 500, 200, 100);
-$candy-app-accent:  mat-palette($mat-light-green, A700, A100, A400);
+$candy-app-primary: mat-palette($mat-green, 500, 200, 100);
+$candy-app-accent:  mat-palette($mat-green, A700, A100, A400);
 $candy-app-warn:    mat-palette($mat-red);
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
 
